--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -15,13 +15,15 @@
 }
 
 .intro {
+  max-width: 950px;
+  margin: 0 auto;
   padding: 0 0 20px;
   border-radius: 12px;
 }
 
-.section{
+.section {
   padding: 40px 0 40px;
-    margin: 40px 0 40px;
+  margin: 40px 0 40px;
 }
 
 .pageTitle {
@@ -42,13 +44,23 @@
 
 .pageSubtitle {
   display: flex;
-  gap: 0.3rem;
-  margin-bottom: 0.5rem;
+  gap: 5px;
+  margin-bottom: 8px;
   font-size: 18px;
   color: var(--accent-color);
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
 }
 
-.pageSubtitleCenter {
+.pageSubtitleCenter  {
   display: block;
   text-align: center;
 }
@@ -92,7 +104,7 @@
 
 .icon {
   vertical-align: text-bottom;
-  font-size: 2rem;
+  font-size: 32;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 }
@@ -106,9 +118,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 16px;
 
-  margin-bottom: 5rem;
+  margin-bottom: 80px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
@@ -117,6 +129,6 @@
 
 .whiteBackground {
   background-color: var(--white-color);
-  gap: 2rem;
+  gap: 32px;
 
 }
