--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -21,7 +21,7 @@
 
     .feature {
       background-color: var(--white-color);
-      padding: 1rem;
+      padding: 16px;
       border-radius: 12px;
       border: 1px solid var(--pink-color);
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -30,7 +30,7 @@
       transition: transform 0.5s ease, box-shadow 0.3s ease;
 
       @media screen and (min-width: $breakpoint-tablet) {
-        padding: 1.2rem;
+        padding: 20px;
         flex-basis: 40%;
         font-size: 1.2;
       }
@@ -43,7 +43,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 1rem;
+        gap: 16px;
         margin-bottom: 16px;
         color: var(--pink-color);
         font-size: 18px;
@@ -81,8 +81,8 @@
         li {
           display: flex;
           align-items: center;
-          gap: 0.5rem;
-          margin-bottom: 0.3rem;
+          gap: 8px;
+          margin-bottom: 4px;
 
 
           font-size: 16px;
@@ -101,7 +101,7 @@
       text-align: center;
     }
 
-    p + p {
+    p+p {
       margin-bottom: 64px;
     }
 
@@ -116,11 +116,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
-    gap: 2rem;
+    gap: 32px;
   }
 }
 
@@ -140,7 +140,7 @@
 
 .icon {
   vertical-align: text-bottom;
-  font-size: 3rem;
+  font-size: 48px;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 
@@ -152,7 +152,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 16px;
   border-radius: 50%;
   border: 1px solid var(--pink-color);
   backdrop-filter: blur(8px);
@@ -167,7 +167,7 @@
 
 .smallIcon {
   vertical-align: text-bottom;
-  font-size: 1.2rem;
+  font-size: 20px;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 }
