--- a/src/components/Header/Burger/Burger.module.scss
+++ b/src/components/Header/Burger/Burger.module.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: space-around;
 
-  width: 2rem;
-  height: 2rem;
+  width: 32px;
+  height: 32px;
   padding: 0;
 
   background: transparent;
@@ -18,8 +18,8 @@
 }
 
 .burger span {
-  width: 2rem;
-  height: 0.25rem;
+  width: 32px;
+  height: 4px;
   background-color: var(--white-color);
   border-radius: 10px;
   transition: all 0.3s linear;
