--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  padding: 0.3rem 1rem;
+  padding: 4px 16px;
   background-color: var(--header-bg);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
   z-index: 20;
@@ -25,7 +25,7 @@
   top: 100%;
   right: 0;
   background-color: var(--header-bg);
-  padding: 1rem;
+  padding: 16px;
   transform: translateX(100%);
   opacity: 0;
   transition: all 0.3s ease;
@@ -37,19 +37,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 1.2rem;
+    gap: 20px;
     transform: translateY(0);
     opacity: 1;
   }
 
   @media screen and (min-width: 920px) {
-    gap: 1.5rem;
-    font-size: 1.2rem;
+    gap: 24px;
+    font-size: 20px;
   }
 
   @media screen and (min-width: $breakpoint-laptop-large) {
-    gap: 2.5rem;
-    font-size: 1.2rem;
+    gap: 40px;
+    font-size: 20px;
   }
 }
 
@@ -67,20 +67,20 @@
 }
 
 .navLink {
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
+  margin-bottom: 16px;
+  font-size: 24px;
   font-weight: 700;
   color: var(--white-color);
   display: inline-block;
   transition: color 0.3s ease, transform 0.3s ease;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.4rem;
+    font-size: 22px;
     margin-bottom: 0;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 }
 
@@ -98,6 +98,6 @@
   .navList {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 16px;
   }
 }
