--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -19,10 +19,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 32px;
 
   margin: 0 auto 24px;
-  // padding: 1rem;
+  // padding: 16px;
   width: 100%;
 
   background: transparent !important;
@@ -31,13 +31,13 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    gap: 32px;
     max-width: 100%;
-    margin: 0 auto 3rem;
+    margin: 0 auto 48px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    margin-bottom: 4rem;
+    margin-bottom: 64px;
   }
 }
 
@@ -55,12 +55,12 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    width: calc(50% - 1rem);
+    width: calc(50% - 16px);
     min-height: 350px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    width: calc(33.333% - 2rem);
+    width: calc(33.333% - 32px);
     min-height: 410px;
   }
 }
@@ -89,7 +89,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100px;
-  padding: 1rem;
+  padding: 16px;
 
   // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
@@ -100,7 +100,7 @@
 
 .icon {
   vertical-align: text-bottom;
-  font-size: 3rem;
+  font-size: 48px;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 
@@ -112,7 +112,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.2rem;
+  padding: 20px;
   margin-bottom: 20px;
   border-radius: 50%;
   border: 1px solid var(--pink-color);
@@ -127,33 +127,33 @@
 
 .lessonTitle {
   width: 100%;
-  font-size: 1rem;
+  font-size: 16px;
   color: var(--pink-color);
-  margin-bottom: 0.5rem;
+  margin-bottom: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.2rem;
+    font-size: 20px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 }
 
 .lessonTitle span {
-  font-size: 0.8rem;
+  font-size: 14px;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1rem;
+    font-size: 16px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.2rem;
+    font-size: 20px;
   }
 }
 
 .lessonSubtitle {
-  font-size: 1rem;
+  font-size: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {}
 
@@ -161,49 +161,51 @@
 }
 
 .lessonPrice {
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
+  font-size: 20px;
+  margin-bottom: 16px;
   font-weight: 700;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.4rem;
+    font-size: 22px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.6rem;
+    font-size: 24px;
   }
 }
 
 .lessonFeatures {
-  padding: 1rem;
+  padding: 16px;
   margin: 0;
   text-align: left;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    padding: 1.5rem;
+    padding: 24px;
   }
 
-  @media screen and (min-width: $breakpoint-desktop) {}
+  @media screen and (min-width: $breakpoint-desktop) {
+    padding: 32px;
+  }
 }
 
 .lessonFeatures li {
   position: relative;
-  margin-bottom: 0.5rem;
-  padding-left: 1.5rem;
+  margin-bottom: 8px;
+  padding-left: 24px;
 
-  font-size: 1rem;
+  font-size: 16;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.1rem;
+    font-size: 18px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.3rem;
+    font-size: 20px;
   }
 }
 
 .lessonFeatures li:not(:last-child) {
-  margin-bottom: 1.2rem;
+  margin-bottom: 20px;
 }
 
 .lessonFeatures li::before {
@@ -213,7 +215,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
 
-  font-size: 1.8rem;
+  font-size: 28px;
   color: var(--pink-color);
   line-height: 1;
 }
@@ -223,11 +225,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
+  gap: 16px;
+  margin-bottom: 32px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
-    gap: 2rem;
+    gap: 32px;
   }
 }
