--- a/src/components/Sections/Sasha/Sasha.module.scss
+++ b/src/components/Sections/Sasha/Sasha.module.scss
@@ -14,7 +14,7 @@
 
 .description {
   display: block;
-  margin-bottom: 1rem;
+  margin: bottom 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     display: none;
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   width: 280px;
-  margin: 0 auto 1rem;
+  margin: 0 auto 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     width: 35%;
@@ -60,7 +60,7 @@
 
 .textBlock {
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     text-align: left;
@@ -80,14 +80,14 @@
 
 .infoWrapper p {
   color: var(--pink-color);
-  font-size: 2rem;
+  font-size: 32px;
   font-weight: 700;
 
   text-align: center;
 
   @media screen and (min-width: $breakpoint-tablet) {
     text-align-last: left;
-    font-size: 3rem;
+    font-size: 48px;
   }
 }
 
@@ -96,12 +96,12 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 20px;
   }
 }
 
 .infoWrapper h2 span {
-  font-size: 1.5rem;
+  font-size: 24px;
   color: var(--pink-color);
 }
 
@@ -114,18 +114,20 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 0.5rem 0 0.5rem;
-  gap: 0.5rem;
+  padding: 8px 0 8px;
+  gap: 8px;
   border-bottom: 1px solid var(--pink-color);
 
   font-weight: 500;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.1rem;
+    font-size: 18px;
+    gap: 16px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.3rem;
+    font-size: 20px;
+    gap: 16px;
   }
 }
 
@@ -159,7 +161,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 16px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   border: 1px solid var(--pink-color);
