--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
 
   font-size: 16px;
   font-weight: 600;
@@ -80,18 +80,17 @@
 }
 
 .button.large {
-  padding: 1rem 1.5rem;
+  padding: 16px 24px;
   min-width: 300px;
   min-height: 500px;
-  font-size: 1.3rem;
+  font-size: 20px;
   border-radius: 12px;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.6rem;
   }
 
   &:hover {
