--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -27,11 +27,11 @@
   right: 10px;
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: 32px;
   cursor: pointer;
 }
 
 .modalContent {
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5;
 }
