--- a/src/components/UI/ProgressBar/ProgressBar.module.scss
+++ b/src/components/UI/ProgressBar/ProgressBar.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 30px;
-  margin-top: 1rem;
+  margin-top: 16px;
   background-color: transparent;
   border: 2px solid var(--mint-color);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -27,7 +27,7 @@
   display: flex;
   justify-content: space-between;
 
-  font-size: 0.85rem;
+  font-size: 14px;
 }
 
 .level {
@@ -56,11 +56,11 @@
 
 .initialText {
   position: absolute;
-  top: -1rem;
+  top: -16px;
   left: 300%;
   transform: translateX(-50%);
   color: var(--pink-color);
-  font-size: 0.75rem;
+  font-size: 12px;
   font-weight: bold;
   white-space: nowrap;
 }
