--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -187,23 +187,23 @@ img {
 }
 
 .heading {
-  margin-bottom: 1rem;
-  font-size: 3rem;
+  margin-bottom: 16px;
+  font-size: 48px;
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .text {
-  margin-bottom: 1.5rem;
-  font-size: 1.2rem;
+  margin-bottom: 24px;
+  font-size: 20px;
   font-weight: 700;
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.8rem;
+    font-size: 28px;
   }
 }
 
