--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -131,8 +131,9 @@
 
 
 .testimonialName {
-  font-weight: bold;
   margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: bold;
   flex-grow: 1;
 }
 
