--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -75,12 +75,12 @@
   transition: color 0.3s ease, transform 0.3s ease;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 22px;
+    font-size: 21px;
     margin-bottom: 0;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 24px;
+    // font-size: 24px;
   }
 }
 
@@ -88,6 +88,12 @@
   transform: scale(1.05);
   text-decoration: underline;
   text-underline-offset: 3px;
+}
+
+.active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  font-weight: 800;
 }
 
 .navItem {
