--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -65,6 +65,7 @@ body {
   // overflow-x: hidden;
   font-family: "Montserrat-Regular", sans-serif;
   color: var(--text-color);
+  line-height: 1.2;
   scroll-behavior: smooth;
 
   @media screen and (max-width: 319px) {
@@ -158,7 +159,7 @@ img {
 .notFound {
   position: relative;
   background: url("/assets/images/404.png") no-repeat center center/cover;
-
+  padding: 200px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
