--- a/src/components/Sections/Features/Features.module.scss
+++ b/src/components/Sections/Features/Features.module.scss
@@ -1,8 +1,6 @@
 @use "../../../styles/variables.scss" as *;
 
 .features {
-  min-height: 800px;
-  background: url("/assets/images/features-mobile.jpg") no-repeat center center/cover;
   background-color: var(--white-color);
   margin-top: -32px;
   margin-bottom: -32px;
@@ -10,17 +8,10 @@
   padding-bottom: 32px;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    height: 768px;
-    background: url("/assets/images/features-tablet.jpg") no-repeat center center/cover;
     margin-top: -64px;
     margin-bottom: -64px;
     padding-top: 64px;
     padding-bottom: 64px;
-  }
-
-  @media screen and (min-width: $breakpoint-desktop) {
-    background: url("/assets/images/features-desktop.jpg") no-repeat center center/cover;
-    height: 1024px;
   }
 }
 
@@ -38,118 +29,115 @@
 }
 
 .featuresList {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  row-gap: 16px;
-  column-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 0 1rem;
   margin-bottom: 24px;
-  width: 100%;
+  font-size: 1rem;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    grid-template-columns: 1fr 1fr;
-    row-gap: 32px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+
+    width: 95%;
+    margin: 0 auto 3rem;
+    padding: 0 2rem;
+
+    font-size: 1.1rem;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    margin-bottom: 64px;
+    font-size: 1.5rem;
+    gap: 3rem;
+    margin-bottom: 4rem;
   }
 }
 
 .featuresList li {
+  position: relative;
+
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  /* gap: 12px; */
 
-  min-height: 48px;
-  padding: 4px 16px;
-  border: 3px solid var(--white-color);
-  border-radius: 50px;
+  min-height: 100px;
+  padding: 0 1rem 1rem;
+  border: 1px solid var(--pink-color);
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 
-  backdrop-filter: blur(8px);
-  background: rgba(255, 255, 255, 0.7);
-
-  font-size: 14px;
-  font-weight: 600;
-  color: var(--text-color);
-
+  background-color: var(--main-bg);
   text-align: center;
+}
 
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    min-height: 80px;
-    padding: 16px 24px;
-    font-size: 18px;
-  }
-
-
-  @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 21px;
+@media screen and (min-width: $breakpoint-mobile-large) {
+  .featuresList li {
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
-.featuresList li:nth-child(1) {
-  justify-self: start;
-  width: 75%;
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    justify-self: start;
-    width: 95%;
+@media screen and (min-width: $breakpoint-tablet) {
+  .featuresList li {
+    width: calc(33% - 2rem);
+    margin-bottom: 2rem;
   }
 }
 
-.featuresList li:nth-child(2) {
-  justify-self: end;
-  width: 75%;
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    justify-self: end;
-    width: 95%;
-
+@media screen and (min-width: $breakpoint-laptop-large) {
+  .featuresList li {
+    width: calc(33% - 2rem);
+    padding: 0 2rem 2rem;
   }
 }
 
-.featuresList li:nth-child(3) {
-  justify-self: start;
-  width: 75%;
+.featuresList li::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 50%;
+  width: 15%;
+  height: 1px;
+  background-color: var(--main-bg);
+  transform: translateX(-50%);
 
   @media screen and (min-width: $breakpoint-tablet) {
-    grid-column: 1 / -1;
-    justify-self: center;
-    width: 50%;
+    width: 25%;
   }
 }
 
-.featuresList li:nth-child(4) {
-  justify-self: end;
-  width: 75%;
+.icon {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  flex-shrink: 0;
+  align-self: center;
+
+  position: relative;
+  top: -0.8rem;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    justify-self: start;
-    width: 95%;
+    top: -1rem;
+
+    width: 28px;
+    height: 28px;
+  }
+
+  @media screen and (min-width: $breakpoint-laptop) {
+    width: 32px;
+    height: 32px;
+  }
+
+  @media screen and (min-width: $breakpoint-laptop-large) {
+    width: 36px;
+    height: 36px;
   }
 }
 
-.featuresList li:nth-child(5) {
-  justify-self: start;
-  width: 75%;
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    justify-self: end;
-    width: 95%;
-  }
-}
-
-.featuresList li:nth-child(6) {
-  justify-self: end;
-  width: 75%;
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    grid-column: 1 / -1;
-    justify-self: center;
-    width: 50%;
-  }
-}
 
 .btnWrapper {
   display: flex;
