--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -23,6 +23,21 @@
   text-align: left;
 }
 
+.cardPrice {
+  display: inline-block;
+  border: 1px solid var(--pink-color);
+  border-radius: 30px;
+  padding: 20px;
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(255, 255, 255, 0.8),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
+
+}
+
 .card h3 {
   display: flex;
   align-items: center;
