--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -69,6 +69,7 @@
 
 .lessonItem {
   width: 100%;
+  padding: 10px;
   background-color: #fff;
   border: 1px solid var(--pink-color);
   border-radius: 8px;
@@ -82,12 +83,12 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     width: calc(50% - 16px);
-    min-height: 350px;
+    max-width: 400px;
+    min-height: 500px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
     width: calc(33.333% - 32px);
-    min-height: 410px;
   }
 }
 
@@ -155,7 +156,7 @@
   width: 100%;
   font-size: 16px;
   color: var(--pink-color);
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     font-size: 20px;
@@ -180,6 +181,7 @@
 
 .lessonSubtitle {
   font-size: 16px;
+  margin-bottom: 20px;
 
   @media screen and (min-width: $breakpoint-tablet) {}
 
@@ -187,16 +189,26 @@
 }
 
 .lessonPrice {
-  font-size: 20px;
-  margin-bottom: 16px;
+  font-size: 16px;
+  // margin-bottom: 16px;
   font-weight: 700;
+  border: 1px solid var(--pink-color);
+  border-radius: 20px;
+  padding: 10px;
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(255, 255, 255, 0.8),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 22px;
+    // font-size: 22px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 24px;
+    // font-size: 24px;
   }
 }
 
@@ -206,11 +218,11 @@
   text-align: left;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    padding: 24px;
+    padding: 16px 24px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    padding: 32px;
+    padding: 16px 32px;
   }
 }
 
@@ -231,7 +243,7 @@
 }
 
 .lessonFeatures li:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 
 .lessonFeatures li::before {
