--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -19,7 +19,7 @@
     position: sticky;
     top: 80px;
 
-    min-height: 80vh;
+    min-height: 550px;
     padding: 24px;
     margin-bottom: 100px;
 
@@ -30,7 +30,7 @@
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    min-height: 70vh;
+    min-height: 55vh;
     top: 100px;
     padding: 32px;
 
